# LeistungsanalyseApp_SimonSchwarzer_LiliEscobar

./: .pdm-python  README.md  main.py  my_functions  pyproject.toml  test.py
