[project]
name = "LeistungsanalyseApp_SimonSchwarzer_LiliEscobar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon-Schwarzer", email = "si8064@mci4me.at"},
]
dependencies = ["numpy>=2.2.4", "pandas>=2.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
